	  licensing on this module to GPL.  To avoid licensing contamination,
	  this driver was moved to misc/drivers/rtl8187x *prior* to adding
	  any of the GPL logic.  There is an INSTALL.sh script at the location
	  where the GPL driver(s) can be re-installed into the NuttX source
	  tree.  By re-installing the driver, you agree to the GPL licsensing
	  and all of its implications.
	* Makefile, apps/Makefile, tools/configure.sh: add logic to copy
	  configs/<board>/<config>/appdir to apps/.config and to simply the
	  application configuration logic.
	* examples/nsh and apps/nshlib: Move the core NuttShell (NSH) logic
	  out of the exemples directory and into the apps/ directory where
	  it belongs.
	* apps/Makefile and configs/*/appconfig: Use '=' as the delimiter
	  instead of '/' so that sub-directories in apps/ can be used.
	* apps/vsn: Move all VSN apps to apps/vsn.
	* nuttx/examples moved to apps/examples

6.1 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/include/lpc17xx/irq.h and arch/arm/src/lpc17xx/lpc17_gpio*.c:
	  Fix several bugs in the GPIO interrupt logic.  Submited by
	  Decio Renno.
	* Initialization for the CONFIG_APPS_DIR is now supported during the
	  earlier, 'context' build phase.
	* arch/arm/src/lpc17_gpioint.c: Finish coding of the LPC17xx GPIO
	  interrupt logic.
	* net/netdev_unregister.c: Add capability to un-register a network
	  device.
	* drivers/mmcsd/mmcsd_sdio.c: extra effort to correctly handle cases
	  without the SDcard (but one issue still exists in STM32)
	* arch/arm/src/stm32/stm32_tim.*: Added basic timer support TIM1..TIM8
	  with output PWMs and interrupt logic
	* config/vsn/src: added basic support for Sensor Interface (GPIO and
	  PWM Power Output, and the sif utility program)
	* fs/: Reorgnize header so that file systems can be built outside
	  of the nuttx source tree
	* apps/namedapp/binfs.c: Create a tiny filesystem that can be used
	  to show the internal named apps under /bin.
